2013-01-09  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 10.12.0-digiumphones-rc2 Released.

2013-01-09 00:23 +0000 [r378686-378705]  Automerge script <automerge@asterisk.org>

	* apps/app_queue.c, /: Merged revisions 378689 via svnmerge from
	  file:///srv/subversion/repos/asterisk/branches/10 ........
	  r378689 | rmudgett | 2013-01-08 17:55:57 -0600 (Tue, 08 Jan 2013)
	  | 4 lines app_queue: Fix incorrect assertion. (issue
	  ASTERISK-16115) ........

	* configs/queues.conf.sample, UPGRADE.txt, CHANGES,
	  apps/app_queue.c, /: Merged revisions 378683 via svnmerge from
	  file:///srv/subversion/repos/asterisk/branches/10
	  ................ r378683 | rmudgett | 2013-01-08 16:55:43 -0600
	  (Tue, 08 Jan 2013) | 29 lines app_queue: Fix multiple calls to a
	  queue member that is in only one queue. When ringinuse=no queue
	  members can receive more than one call if these calls happen at
	  nearly the same time. * Fix so a queue member does not receive
	  more than one call from a queue. NOTE: This fix does not prevent
	  multiple calls to a member if the member is in more than one
	  queue. * Did some refactoring to eliminate some code redundancy.
	  (issue ASTERISK-16115) Reported by: nik600 Patches:
	  jira_asterisk_16115_single_q_v1.8.patch (license #5621) patch
	  uploaded by rmudgett Modified * Revert the -r341580 and -r341599
	  changes adding the queues.conf check_state_unknown option as it
	  was added in an attempt to fix this problem. The fix did not need
	  to be optional. The fix should not have tried to explicitly set
	  the device state. Setting the device state by something other
	  than the device introduces a race condition. I also could not see
	  how the change would be effective other than delaying the
	  app_queue code long enough for the device state to propagate to
	  app_queue. ........ Merged revisions 378663 from
	  http://svn.asterisk.org/svn/asterisk/branches/1.8
	  ................
